# bsdiff4.3_bzip2_cmake

./: CMakeLists.txt  LICENSE  README.md
src/: jni_bridge.h  main.c
src/bzip2-1.0.8/: bzip2.c  bzip2recover.c  mk251.c
